--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <body>
 
     <%= render "shared/header" %>
-    <% render 'shared/alerts' %>
+    <%= render 'shared/alerts' %>
 
     <main role="main">
       <% if user_signed_in? %>
