--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -1,2 +1,4 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p> 
+<div class = "alerts">
+    <p><%= notice %></p>
+    <p><%= alert %></p> 
+</div>
