--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -2,7 +2,7 @@
 <nav id="sidebar">
     <div class="sidebar-header">
         <div class = 'profile-userpic' >
-            <img src="<%= asset_path('gradient3.jpg')%>" alt="profilepic" height="128" width="128">
+            <img id="profilepic" src="<%= asset_path('gradient3.jpg')%>" alt="profilepic" height="128" width="128">
             <p style = "padding-top: 10px;"><%= current_user.email.split('@')[0] %></p>
         </div>
     </div>
