--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -17,13 +17,13 @@
     <!-- Footer Page Elements-->
     <ul class = "list-inline page-elements">
       <li>
-        <a>Privacy</a>
+        <a id="privacyLink">Privacy</a>
       </li>
       <li>
         <a> | </a>
       </li>
       <li>
-        <a>Terms</a>
+        <a id="termsLink">Terms</a>
       </li>
       <li>
         <a> | </a>
