--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -4,7 +4,7 @@
     .saved_recipes{
         align-self: center;
         height: 100vh;
-        width: 100vw;
+        width: 80vw;
         display: flex;
         margin: 8%;
 
@@ -52,9 +52,24 @@
     }
 }
 
+#new_recipe{
+    margin-top: -50px;
+}
+.recipe_user_id{
+    max-height: 0;
+    visibility: hidden;
+}
+.recipe_name{
+    max-height: 0;
+    visibility: hidden;
+}
+.recipe_sourceUrl{
+    max-height: 0;
+    visibility: hidden;
+}
 @media (max-width: 768px){
     .saved_recipes{
         min-width: 100vw;   
-        margin: 0;
+        margin: 0 !important;
     }
 }
