--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en-UK">
   <head>
     <title>4Students</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,11 +51,14 @@
               <h4 class="modal-title">About <%= current_user.email.split('@')[0] %></h4>
             </div>
             <div class="modal-body">
+            <% saved_recipes = Recipe.where(user_id: current_user).length %>
+            <% messages_send = ChatMessage.where(user: current_user).length %>
               <p>
                 <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-email-512.png" width="20px" /> <%= current_user.email %> <br />
-                <img src="http://icons.iconarchive.com/icons/icons8/windows-8/256/Science-University-icon.png" width="15px" /> <!-- have to rewrite the UK university func, someone deleted it.. -->
+               <!-- <img src="http://icons.iconarchive.com/icons/icons8/windows-8/256/Science-University-icon.png" width="15px" />  have to rewrite the UK university func, someone deleted it.. -->
               </p>
-              <p>This is just an example for now.</p>
+              <img src="<%= asset_path('recipebook.png')%>" width="20px"> Saved recipes: <b><%= saved_recipes%></b><br>
+              <img src="<%= asset_path('messages.png')%>" width="20px"> Messages send: <b><%= messages_send%></b><br>
             </div>
             <div class="modal-footer">
               <%= link_to "Delete Account", registration_path(current_user), data: { confirm: "Yes, I know this will delete my account." }, method: :delete, class: "btn btn-danger mr-auto" %>
