--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -16,8 +16,8 @@
                 <li class = "recipe-content">
                     <div class = "recipe-info">
                         <div class = "recipe-name"> Name: <p class = "recipe-text"> <%= recipe.name %> </p></div>
-                        <div class = "recipe-name"> SourceUrl: <p class = "recipe-text"> <%= recipe.sourceUrl %> </p></div>
-                        <%= link_to 'Delete Recipe', recipe, method: :delete, data: { confirm: 'Are you sure?' }, class: "recipe_link_word" %>
+                        <div class = "recipe-name"> SourceUrl: <a href ="<%= recipe.sourceUrl %>"class = "recipe-text" ref = "noopener noreferrer"> <%= recipe.sourceUrl %> </a></div>
+                        <%= link_to 'Delete Recipe', recipe, method: :delete, data: { confirm: 'Do you want to delete this recipe?' }, class: "recipe_link_word" %>
                     </div>
                 </li>
             </div>
