--- a/app/views/entertainment/show.html.erb
+++ b/app/views/entertainment/show.html.erb
@@ -1,5 +1,10 @@
 <div class="entertainment-section">
   <div id = "emap"></div>
+  <div class = "list-of-events">
+    <button id ="get-events-button"class = "round-btn" onclick = "getEvents()"> Get Events</button>
+    <ul id = 'details-of-event' class = "details-of-events">
+    </ul>
+  </div>
 
 
 <script async defer
