--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,48 @@
               <h4 class="modal-title">Terms of Use</h4>
             </div>
             <div class="modal-body">
-              <p>Text here</p>
+              <h2><strong>Terms and Conditions</strong></h2>
+
+              <p>Welcome to 4Student!</p>
+
+              <p>These terms and conditions outline the rules and regulations for the use of 4Student's Website, located at https://4student.me</p>
+
+              <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use 4student if you do not agree to take all of the terms and conditions stated on this page. Our Terms and Conditions were created with the help of the <a href="https://www.termsandconditionsgenerator.com">Terms And Conditions Generator</a>.</p>
+
+              <p>The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</p>
+
+              <h3><strong>Cookies</strong></h3>
+
+              <p>We employ the use of cookies. By accessing 4student, you agreed to use cookies in agreement with the 4student's Privacy Policy.</p>
+
+              <p>Most interactive websites use cookies to let us retrieve the user’s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies.</p>
+
+              <h3><strong>License</strong></h3>
+
+              <p>Unless otherwise stated, 4student and/or its licensors own the intellectual property rights for all material on 4student. All intellectual property rights are reserved. You may access this from 4student for your own personal use subjected to restrictions set in these terms and conditions.</p>
+
+              <p>You must not:</p>
+              <ul>
+                  <li>Republish material from 4student</li>
+                  <li>Reproduce, duplicate or copy material from 4student</li>
+                  <li>Redistribute content from 4student</li>
+              </ul>
+
+              <p>This Agreement shall begin on the date hereof.</p>
+
+              <p>You hereby grant 4student a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.</p>
+
+              <h3><strong>Your Privacy</strong></h3>
+
+              <p>Please read Privacy Policy</p>
+
+              <h3><strong>Reservation of Rights</strong></h3>
+
+              <p>We reserve the right to request that you remove all links or any particular link to our Website. You approve to immediately remove all links to our Website upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our Website, you agree to be bound to and follow these linking terms and conditions.</p>
+
+              <p>The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.</p>
+
+              <p>As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -101,7 +142,43 @@
               <h4 class="modal-title">Privacy Policy</h4>
             </div>
             <div class="modal-body">
-              <p>Text here</p>
+              <h1>Privacy Policy for 4students</h1>
+
+                <p>At 4student, accessible from https://4student.me/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by 4student and how we use it.</p>
+
+                <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
+
+                <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in 4student. This policy is not applicable to any information collected offline or via channels other than this website.</p>
+
+                <h2>Consent</h2>
+
+                <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
+
+                <h2>Information we collect</h2>
+
+                <p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.</p>
+
+                <h2>How we use your information</h2>
+
+                <p>We use the information we collect in various ways, including to:</p>
+
+                <ul>
+                <li>Provide, operate, and maintain our webste</li>
+                <li>Develop new products, services, features, and functionality</li>
+                <li>Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the webste, and for marketing and promotional purposes</li>
+                </ul>
+
+                <h2>GDPR Data Protection Rights</h2>
+
+                <p>We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:</p>
+                <p>The right to access – You have the right to request copies of your personal data. We may charge you a small fee for this service.</p>
+                <p>The right to rectification – You have the right to request that we correct any information you believe is inaccurate. You also have the right to request that we complete the information you believe is incomplete.</p>
+                <p>The right to erasure – You have the right to request that we erase your personal data, under certain conditions.</p>
+                <p>The right to restrict processing – You have the right to request that we restrict the processing of your personal data, under certain conditions.</p>
+                <p>The right to object to processing – You have the right to object to our processing of your personal data, under certain conditions.</p>
+                <p>The right to data portability – You have the right to request that we transfer the data that we have collected to another organization, or directly to you, under certain conditions.</p>
+                <p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.</p>
+
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
