--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -16,7 +16,7 @@
                 <li class = "recipe-content">
                     <div class = "recipe-info">
                         <div class = "recipe-name"> Name: <p class = "recipe-text"> <%= recipe.name %> </p></div>
-                        <div class = "recipe-name"> SourceUrl: <a href ="<%= recipe.sourceUrl %>"class = "recipe-text" ref = "noopener noreferrer"> <%= recipe.sourceUrl %> </a></div>
+                        <div class = "recipe-name"> SourceUrl: <p class  ="recipe-text"> <a href ="<%= recipe.sourceUrl %>"class = "recipe-text" ref = "noopener noreferrer"> <%= recipe.sourceUrl %> </a></p></div>
                         <%= link_to 'Delete Recipe', recipe, method: :delete, data: { confirm: 'Do you want to delete this recipe?' }, class: "recipe_link_word" %>
                     </div>
                 </li>
