Added Background pic

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <div class="item">
-          <div class="item-carousel-image" style = "background-image: url('<%= asset_path('gradient2.jpg')%>');"></div>
+          <div class="item-carousel-image" style = "background-image: url('<%= asset_path('entertainment.jpg')%>');"></div>
           <div class="carousel-caption">
             <h3 class = "animated fadeIn">Entertainment <%= fa_icon "child"%></h3>
             <p>Entertain your self!</p>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="item">
-          <div class="item-carousel-image" style = "background-image: url('<%= asset_path('gradient3.jpg')%>');"></div>
+          <div class="item-carousel-image" style = "background-image: url('<%= asset_path('support.jpg')%>');"></div>
           <div class="carousel-caption">
             <h3>Support <%= fa_icon "home"%></h3>
             <p>Don't keep it inside!</p>
