Added second tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,29 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <script data-ad-client="ca-pub-1055168938035092" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script type="text/javascript">
+    window._mNHandle = window._mNHandle || {};
+    window._mNHandle.queue = window._mNHandle.queue || [];
+    medianet_versionId = "3121199";
+</script>
+<script src="https://contextual.media.net/dmedianet.js?cid=8CU15BD1W" async="async"></script>
   </head>
 
   <body>
 
     <%= render "shared/header" %>
     <%= render 'shared/alerts' %>
+
+    <div id="656786146">
+    <script type="text/javascript">
+        try {
+            window._mNHandle.queue.push(function (){
+                window._mNDetails.loadTag("656786146", "728x90", "656786146");
+            });
+        }
+        catch (error) {}
+    </script>
+</div>
 
     <main role="main">
       <% if user_signed_in? %>
