Added Meta Tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>4Students</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Students Helper, students life, students">
     <%= favicon_link_tag asset_path('logo4.png') %>
 
     <!-- Add jquery validator -->
